# silentcmd

./: .gitignore  Cargo.toml
scripts/: build-alsa  build-jack-plugin  plot.sh  start-dummy-jack-server  test-record
src/: alsa_detect.rs  common.rs  jack_plugin.rs  switch.rs  wav_detect.rs
